{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 192,
  "lineage": "d08be55f-7352-6bcd-1e45-6f7e9f484bba",
  "resources": [
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:632108462029:security-group/sg-06faf1017207e95d5",
            "description": "Security Group managed by Terraform",
            "egress": [],
            "id": "sg-06faf1017207e95d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.99.0.0/18"
                ],
                "description": "Ingress Rule",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "snippets-20210620140937710600000002",
            "name_prefix": "snippets-",
            "owner_id": "632108462029",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "snippets"
            },
            "tags_all": {
              "Name": "snippets"
            },
            "timeouts": null,
            "vpc_id": "vpc-099c935a80684f12b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.99.0.0/18"
            ],
            "description": "Ingress Rule",
            "from_port": 5432,
            "id": "sgrule-1160479433",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06faf1017207e95d5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "module.security_group.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:632108462029:internet-gateway/igw-06175bbf473d88712",
            "id": "igw-06175bbf473d88712",
            "owner_id": "632108462029",
            "tags": {
              "Name": "snippets"
            },
            "tags_all": {
              "Name": "snippets"
            },
            "vpc_id": "vpc-099c935a80684f12b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06175bbf473d88712",
            "id": "r-rtb-0625b51c59369d57c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0625b51c59369d57c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:632108462029:route-table/rtb-053d0fb910ef83911",
            "id": "rtb-053d0fb910ef83911",
            "owner_id": "632108462029",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "snippets-private-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "snippets-private-ap-southeast-1a"
            },
            "vpc_id": "vpc-099c935a80684f12b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:632108462029:route-table/rtb-0ec9924959ed32bbb",
            "id": "rtb-0ec9924959ed32bbb",
            "owner_id": "632108462029",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "snippets-private-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "snippets-private-ap-southeast-1b"
            },
            "vpc_id": "vpc-099c935a80684f12b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:632108462029:route-table/rtb-0f444cd7d082d96e7",
            "id": "rtb-0f444cd7d082d96e7",
            "owner_id": "632108462029",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "snippets-private-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "snippets-private-ap-southeast-1c"
            },
            "vpc_id": "vpc-099c935a80684f12b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:632108462029:route-table/rtb-0625b51c59369d57c",
            "id": "rtb-0625b51c59369d57c",
            "owner_id": "632108462029",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06175bbf473d88712",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "snippets-public"
            },
            "tags_all": {
              "Name": "snippets-public"
            },
            "vpc_id": "vpc-099c935a80684f12b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c76f993355ef199b",
            "route_table_id": "rtb-053d0fb910ef83911",
            "subnet_id": "subnet-0f2a71f600e4b16e2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a643b1cecdb91337",
            "route_table_id": "rtb-0ec9924959ed32bbb",
            "subnet_id": "subnet-071a7da57477807e0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0480eacfc239233a4",
            "route_table_id": "rtb-0f444cd7d082d96e7",
            "subnet_id": "subnet-075d3e8722aad4f32"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.database"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc051f6379bddf3f",
            "route_table_id": "rtb-053d0fb910ef83911",
            "subnet_id": "subnet-0100a37e5dd54b975"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0695dc4a8a29f7f75",
            "route_table_id": "rtb-0ec9924959ed32bbb",
            "subnet_id": "subnet-0ab4e5044516a1043"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004d9a0bb83d11faf",
            "route_table_id": "rtb-0f444cd7d082d96e7",
            "subnet_id": "subnet-04066cbd5d1f52e1c"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0568714c4f8a0bd66",
            "route_table_id": "rtb-0625b51c59369d57c",
            "subnet_id": "subnet-0f95a2c1e5473ac5f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a1f2fcdf3a09d85",
            "route_table_id": "rtb-0625b51c59369d57c",
            "subnet_id": "subnet-0ea8568f5d0dbdf15"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e443d9e24d1f2bd5",
            "route_table_id": "rtb-0625b51c59369d57c",
            "subnet_id": "subnet-0bdaea079229d6ca7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:632108462029:subnet/subnet-0f2a71f600e4b16e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.99.6.0/24",
            "id": "subnet-0f2a71f600e4b16e2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "632108462029",
            "tags": {
              "Name": "snippets-db-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "snippets-db-ap-southeast-1a"
            },
            "vpc_id": "vpc-099c935a80684f12b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:632108462029:subnet/subnet-071a7da57477807e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.99.7.0/24",
            "id": "subnet-071a7da57477807e0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "632108462029",
            "tags": {
              "Name": "snippets-db-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "snippets-db-ap-southeast-1b"
            },
            "vpc_id": "vpc-099c935a80684f12b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:632108462029:subnet/subnet-075d3e8722aad4f32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.99.8.0/24",
            "id": "subnet-075d3e8722aad4f32",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "632108462029",
            "tags": {
              "Name": "snippets-db-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "snippets-db-ap-southeast-1c"
            },
            "vpc_id": "vpc-099c935a80684f12b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:632108462029:subnet/subnet-0100a37e5dd54b975",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.99.3.0/24",
            "id": "subnet-0100a37e5dd54b975",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "632108462029",
            "tags": {
              "Name": "snippets-private-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "snippets-private-ap-southeast-1a"
            },
            "vpc_id": "vpc-099c935a80684f12b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:632108462029:subnet/subnet-0ab4e5044516a1043",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.99.4.0/24",
            "id": "subnet-0ab4e5044516a1043",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "632108462029",
            "tags": {
              "Name": "snippets-private-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "snippets-private-ap-southeast-1b"
            },
            "vpc_id": "vpc-099c935a80684f12b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:632108462029:subnet/subnet-04066cbd5d1f52e1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.99.5.0/24",
            "id": "subnet-04066cbd5d1f52e1c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "632108462029",
            "tags": {
              "Name": "snippets-private-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "snippets-private-ap-southeast-1c"
            },
            "vpc_id": "vpc-099c935a80684f12b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:632108462029:subnet/subnet-0f95a2c1e5473ac5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.99.0.0/24",
            "id": "subnet-0f95a2c1e5473ac5f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "632108462029",
            "tags": {
              "Name": "snippets-public-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "snippets-public-ap-southeast-1a"
            },
            "vpc_id": "vpc-099c935a80684f12b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:632108462029:subnet/subnet-0ea8568f5d0dbdf15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.99.1.0/24",
            "id": "subnet-0ea8568f5d0dbdf15",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "632108462029",
            "tags": {
              "Name": "snippets-public-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "snippets-public-ap-southeast-1b"
            },
            "vpc_id": "vpc-099c935a80684f12b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:632108462029:subnet/subnet-0bdaea079229d6ca7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.99.2.0/24",
            "id": "subnet-0bdaea079229d6ca7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "632108462029",
            "tags": {
              "Name": "snippets-public-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "snippets-public-ap-southeast-1c"
            },
            "vpc_id": "vpc-099c935a80684f12b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:632108462029:vpc/vpc-099c935a80684f12b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.99.0.0/18",
            "default_network_acl_id": "acl-03c6eecae2b0700ad",
            "default_route_table_id": "rtb-0b14d7a3b58c3b911",
            "default_security_group_id": "sg-0a8b2b726675f2dd4",
            "dhcp_options_id": "dopt-c99fa5ae",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-099c935a80684f12b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b14d7a3b58c3b911",
            "owner_id": "632108462029",
            "tags": {
              "Name": "snippets"
            },
            "tags_all": {
              "Name": "snippets"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}